Oct 05, 2022
  OmimPsCustomDoTermMapper: tune up (to handle situation where one OMIM:PS is associated with multiple RDO terms)

Aug 26, 2022
  parser: tuned up logging

Aug 01, 2022
  parser: better handling of MESH ids
  EFO-to-RDO mapper: finished EFO-to-MP and EFO-to-HP mappers

Jul 26, 2022
  fix to prevent erroneous deletion of dags / obsoletion of terms
  MP ontology: added loading of ORCID ids into 'created_by' field
  EFO-to-RDO mapper: refactored code to allow adding EFO-to-MP and EFO-to-HP mappers in the future

Jul 22, 2022
  added EFO-to-RDO mapper

Jun 21, 2022
  TaxonConstraints: fixed a bug preventing proper generation and cleanup of Not4Curation synonyms for GO terms

Jun 06, 2022
  DO qc: updated loading of term definitions

Mar 25, 2022
  go constraints: tuned up logging

Mar 24, 2022
  updated rat lineage (NCBI taxonomy)
  go constraints: switched to new source files (old source files no longer available)

Mar 17, 2022
  deployed OmimPsCustomDoTermMapper, to populate table OMIM_PS_CUSTOM_DO

Mar 08, 2022
  do qc: implemented checking of OMIM:PS ids (if they are assigned to the same terms in RGD as they are in DO)

Feb 14, 2022
  parser: updated to allow loading of MONDO ontology

Feb 10, 2022
  DO qc: fixed handling of UTF-8 characters

Jan 04, 2022
  obo exporter: config fix (was using retired ftp://ftp.rgd.mcw.edu)

Dec 20, 2021
  parser: UBERON ontology: 'mutually_spacially_disjoint_with' relationship loaded as synonyms to avoid cycles
  upgraded log4j to avoid zero day vulnerability

Sep 14, 2021
  refactor loader to simplify code and use java streams

Jul 26, 2021
  parser: treats all files as UTF-8-encoded
    (previously most files were considered ISO-8859-1 encoded, and some UTF-8 encoded;
     that resulted in garbled characters being loaded, because now everybody is using UTF-8 encoding)

Jul 21, 2021
  loader: added removal of cyclic relationship for UBERON

Jun 18, 2021